--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,14 @@
+@media screen and (max-width: 1000px) {
+    .containerbutton, .containerinfo {
+        flex-direction: column;
+    }
+    .containerinfo {
+        order: 2;
+    }
+    .containerbutton {
+        order: 1;
+    }
+}
 body{
     background-color: #f0f0f0;
     font-family: 'Trebuchet MS';
@@ -46,9 +57,9 @@ footer{
 }
 
 .containerbutton{
-    background-color: green;
+    background-color: black;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     height: auto;
     width: 50%;
@@ -65,18 +76,37 @@ footer{
 }
 
 .calc, .conv{
-    background-color: white;
     width: 50%;
     height: auto;
-    color: white;
     font-size: 30px;
+    flex-direction: row;
 }
 
 .calc {
+    position: relative;
     width: 50%;
     height: auto;
     padding: 0;
     border: none;
+    background: linear-gradient(45deg, #ff8800, #333, #333, #ff8800);
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+
+.calc::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('/img/calc.png') no-repeat center center/100% 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.calc:hover::before {
+    opacity: 1;
 }
 
 .conv {
@@ -84,34 +114,7 @@ footer{
     height: auto;
     padding: 0;
     border: none;
-}
-
-.calc img {
-    width: 100%;
-    height: auto;
-    opacity: 0.6;
-    border-radius: 35%;
-    transition: opacity 0.5s ease;
-    transition: transform 0.3s ease-in-out;
-}
-
-.conv img {
-    width: 100%;
-    height: auto;
-    opacity: 0.6;
-    border-radius: 35%;
-    transition: opacity 0.5s ease;
-    transition: transform 0.3s ease-in-out;
-}
-
-.calc img:hover{
-    opacity: 0.9;
-    transform: scale(0.9);
-}
-
-.conv img:hover{
-    opacity: 0.9;
-    transform: scale(0.9);
+    background-color: purple;
 }
 
 .info{
