--- a/style/index.css
+++ b/style/index.css
@@ -41,34 +41,43 @@ footer {
 }
 
 .containerbutton {
-    background-color: black;
+    background-color: transparent;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     height: auto;
-    width: 50%;
+    width: 49%;
+    margin: 10px;
 }
 
 .containerinfo {
-    background-color: greenyellow;
+    background-color: #f8f9fa;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: auto;
-    width: 50%;
-    padding: 1%;
+    width: 49%;
+    border-radius: 25px;
+    box-shadow: black 0px 0px 20px;
+    margin: 10px;
 }
 
 .calc, .conv {
     width: 50%;
-    height: auto;
-    font-size: 30px;
+    height: 400px;
+    font-size: 50px;
     flex-direction: row;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     text-decoration: none;
+    border-radius: 50px;
+    margin: 5px;
+    max-width: 600px;
+    min-width: 200px;
+    max-height: 400px;
+    min-height: 200px;
 }
 
 .calc {
@@ -76,9 +85,10 @@ footer {
     width: 50%;
     padding: 0;
     border: none;
-    background: linear-gradient(45deg, #ff8800, #333, #333, #ff8800);
+    background: linear-gradient(45deg, black, #ff8000, black, #ffffff, black);
     transition: 0.5s ease-in-out;
     overflow: hidden;
+    box-shadow: black 0px 0px 20px;
 }
 
 .calc::before {
@@ -88,9 +98,16 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/img/calc.png') no-repeat center center/100% 100%;
+    background-color: black;
+    background-image: url('/img/calcbtn.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .calc:hover::before {
@@ -98,10 +115,37 @@ footer {
 }
 
 .conv {
+    position: relative;
     width: 50%;
     padding: 0;
     border: none;
-    background-color: purple;
+    background: linear-gradient(-45deg,  black, #00ff44, black, #00ffbb, black);
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+    box-shadow: black 0px 0px 20px;
+}
+
+.conv::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-image: url('/img/convbtn.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.conv:hover::before {
+    opacity: 1;
 }
 
 .info {
@@ -118,18 +162,18 @@ footer {
     text-decoration: none;
 }
 
-/* Media query for screens less than 1000px wide */
-@media (max-width: 1000px) {
+/* El cuadro mide menos de 1000px */
+@media (max-width: 1250px) {
     .containers {
         flex-direction: column;
     }
 
     .containerbutton, .containerinfo {
-        width: 100%;
+        width: 96%;
     }
 
     .calc, .conv {
-        height: 200px;
+        height: 400px;
         width: 100%;
     }
 }
