--- a/style/index.css
+++ b/style/index.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #f0f0f0;
+    background-color: white;
     font-family: 'Trebuchet MS';
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #333;
+    background: black;
     color: white;
     text-align: center;
     height: 15%;
@@ -51,7 +51,7 @@ footer {
 }
 
 .containerinfo {
-    background-color: #f8f9fa;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -85,7 +85,7 @@ footer {
     width: 50%;
     padding: 0;
     border: none;
-    background: linear-gradient(45deg, black, #ff8000, black, #ffffff, black);
+    background: linear-gradient(-45deg,  black, black, white, black, black, black, black, white, black, black);
     transition: 0.5s ease-in-out;
     overflow: hidden;
     box-shadow: black 0px 0px 20px;
@@ -119,7 +119,7 @@ footer {
     width: 50%;
     padding: 0;
     border: none;
-    background: linear-gradient(-45deg,  black, #00ff44, black, #00ffbb, black);
+    background: linear-gradient(45deg,  black, black, white, black, black, black, black, white, black, black);
     transition: 0.5s ease-in-out;
     overflow: hidden;
     box-shadow: black 0px 0px 20px;
@@ -148,18 +148,70 @@ footer {
     opacity: 1;
 }
 
-.info {
-    background-color: aqua;
+.bodyinfo{
     display: flex;
     justify-content: space-between;
     height: auto;
     width: 100%;
 }
 
+.info {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    border-radius: 25px;
+    box-shadow: black 0px 0px 20px;
+    margin: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.img{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border-radius: 500px;
+}
+
+.img2{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 .github {
     color: white;
     text-align: center;
     text-decoration: none;
+}
+
+/* Estilo para la barra de desplazamiento */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+/* Estilo para el track (la parte que no se mueve) */
+::-webkit-scrollbar-track {
+    background: black;
+}
+
+/* Estilo para el handle (la parte que se mueve) */
+::-webkit-scrollbar-thumb {
+    background: white;
+}
+
+/* Estilo para el handle al pasar el mouse */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 /* El cuadro mide menos de 1000px */
@@ -175,5 +227,10 @@ footer {
     .calc, .conv {
         height: 400px;
         width: 100%;
+        font-size: 40px;
+    }
+    .img{
+        width: 200px;
+        height: 200px;
     }
 }
