--- a/style/index.css
+++ b/style/index.css
@@ -16,12 +16,10 @@ header {
 }
 
 footer {
-    background-color: #333;
+    background-color: black;
     color: white;
-    text-align: center;
-    height: 10%;
+    height: 15%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -180,18 +178,19 @@ footer {
     border-radius: 500px;
 }
 
-.img2{
-    width: 300px;
-    height: 300px;
-    margin: 10px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+.imgGH{
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+    left: 10px;	
 }
 
 .github {
     color: white;
-    text-align: center;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Estilo para la barra de desplazamiento */
