calc i conv building i CSS general

--- a/templates/conv.html
+++ b/templates/conv.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+<link rel="stylesheet" href="/style/style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CalcConvert</title>
+    <link rel="icon" href="/img/logoB.png">
 </head>
+<header>
+    <img src="/img/logoN.png" alt="CalcConvert" style="width: 75px; height: 75px; position: absolute; left: 10px;">
+    <h1 style="font-size: 50px; text-align: center;">CalcConvert</h1>
+</header>
 <body>
-    
+    <div class="containerbuild">
+        <img class="imagenbuild" src="/img/logoB.png" alt="CalcConvert">
+        <h1>⚒️🛠️ Building this page 🛠️⚒️</h1>
+    </div>
 </body>
+<footer>
+    <a href="https://github.com/Eriquito00">
+        <img class="imgGH" src="/img/github.png" alt="CalcConvert">
+    </a>
+    <p class="github">Created by: Eriquito00</p>
+</footer>
 </html>
