--- a/style/index.css
+++ b/style/index.css
@@ -72,7 +72,7 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    background-image: url('/img/calcbtn.png');
+    background-image: url("../img/calcbtn.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -106,7 +106,7 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    background-image: url('/img/convbtn.png');
+    background-image: url("../img/convbtn.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
