--- a/templates/calc.html
+++ b/templates/calc.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <link rel="stylesheet" href="../style/style.css">
+<link rel="stylesheet" href="../style/calc.css">
+<script src="../scripts/calc.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +14,27 @@
     <h1 style="font-size: 50px; text-align: center;">CalcConvert</h1>
 </header>
 <body>
-    <div class="containerbuild">
-        <img class="imagenbuild" src="../img/logoB.png" alt="CalcConvert">
-        <h1>⚒️🛠️ Building this page 🛠️⚒️</h1>
+    <div class="basecalc">
+        <input class="inputcalc" type="text" id="display" readonly>
+        <div class="teclado">
+            <button class="numscalc" onclick="num1();">1</button>
+            <button class="numscalc" onclick="num2();">2</button>
+            <button class="numscalc" onclick="num3();">3</button>
+            <button class="numscalc" onclick="num4();">4</button>
+            <button class="numscalc" onclick="num5();">5</button>
+            <button class="numscalc" onclick="num6();">6</button>
+            <button class="numscalc" onclick="num7();">7</button>
+            <button class="numscalc" onclick="num8();">8</button>
+            <button class="numscalc" onclick="num9();">9</button>
+            <button class="numscalc" onclick="num0();">0</button>
+            <button class="operadorcalc" onclick="suma();">+</button>
+            <button class="operadorcalc" onclick="rest();">-</button>
+            <button class="operadorcalc" onclick="mult();">x</button>
+            <button class="operadorcalc" onclick="divi();">÷</button>
+            <button class="funcionescalc" onclick="borranum();">C</button>
+            <button class="funcionescalc" onclick="borrartodo();">CE</button>
+            <button class="funcionescalc" onclick="result();">=</button>
+        </div>
     </div>
 </body>
 <footer>
