--- a/templates/calc.html
+++ b/templates/calc.html
@@ -48,7 +48,23 @@
         </div>
         <div class="mecalc">
             <h2>Calculadora</h2>
-            <p>Calculadora básica con las operaciones básicas de suma, resta, multiplicación y división.</p>
+            <div class="textexplicacalc">
+                <p>Calculadora básica con las operaciones básicas de suma, resta, multiplicación y división.</p>
+                <h3>Ejemplo de uso</h3>
+                <p>Imagina que quieres sumar 23 y 45:</p>
+                <ol>
+                    <li>Presiona 2 y luego 3 en los botones numéricos.</li>
+                    <li>Presiona el botón +.</li>
+                    <li>Presiona 4 y luego 5.</li>
+                    <li>Presiona el botón =.</li>
+                    <li>El resultado 68 aparecerá en la pantalla.</li>
+                </ol>
+                <h3>Informacion adicional</h3>
+                <ul>
+                    <li>En la sección "Operaciones", podrás ver un historial de las operaciones que has realizado.</li>
+                    <li>Si en cualquier momento quieres volver a la página principal, haz clic en el enlace Home.</li>
+                </ul>
+            </div>
             <a href="../index.html" class="returnhome">Home</a>
         </div>
     </div>
