boton calc funciona pero no opera

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -18,8 +18,8 @@
         <div class="basecalc">
             <input class="inputcalc" type="text" id="display" readonly>
             <div class="teclado">
-                <button class="teclascalc" onclick="borrartodo();">CE</button>
-                <button class="teclascalc" onclick="borranum();">C</button>
+                <button class="teclascalc" onclick="borranum();">CE</button>
+                <button class="teclascalc" onclick="borrartodo();">C</button>
                 <button class="teclascalc" onclick="porc();">%</button>
                 <button class="teclascalc" onclick="divi();">÷</button>
                 <button class="teclascalc" onclick="num7();">7</button>
