--- a/templates/calc.html
+++ b/templates/calc.html
@@ -42,9 +42,9 @@
         </div>
         <div class="operaciones">
             <div>
-                <h2>Operaciones</h2>
-                <div style="background-color: whitesmoke;">
-                    <pre id="history" class="operationHistory"></pre>
+                <h1 style="text-align: center;">Operaciones</h1>
+                <div>
+                    <p id="history" class="operationHistory"></p>
                 </div>
             </div>
         </div>
