--- a/style/conv.css
+++ b/style/conv.css
@@ -1,3 +1,7 @@
+h1{
+    font-size: 50px;
+}
+
 .containerconv{
     display: grid;
     background-color: white;
@@ -45,7 +49,7 @@
     border: 5px solid black;
     border-radius: 25px;
     width: auto;
-    font-size: 15px;
+    font-size: 20px;
     color: black;
 }
 
@@ -80,7 +84,7 @@
         font-size: 25px;
     }
     .valorUser, .medidaInicial, .valorResultado, .medidaFinal , .botonconv{
-        font-size: 15px;
+        font-size: 20px;
     }
 }
 @media (max-width: 750px){
@@ -95,6 +99,6 @@
         font-size: 30px;
     }
     .valorUser, .medidaInicial, .valorResultado, .medidaFinal, .botonconv{
-        font-size: 20px;
+        font-size: 25px;
     }
 }
