--- a/templates/conv.html
+++ b/templates/conv.html
@@ -133,7 +133,7 @@
     </div>
     <div class="infoconv">
         <h1 style="text-align: center;">Conversor de unidades</h1>
-        <div style="margin-left: 50px;">
+        <div style="margin-left: 50px; margin-right: 50px;">
             <p>Conversor de algunas unidades a nivel mundial como medidas, pesos, temperaturas y tipos de dinero.</p>
             <h3>Ejemplo de uso</h3>
             <p>Imagina que quieres pasar 10 kilosgramos a gramos:</p>
